--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-currency-input-field": "^3.6.10",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
