--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bank-u1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://codevivi.github.io/back-u1/",
+  "homepage": "https://codevivi.github.io/bank-u1/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
